Segmentation error 11: vanished

--- a/07-evaluations_consolidate.ipynb
+++ b/07-evaluations_consolidate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -167,23 +167,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "liblinear accuracy:48.52\n",
+      "liblinear mse:175.27\n",
+      "liblinear accuracy:47.05\n",
+      "liblinear mse:177.75\n",
+      "svm: 0.0 0.0\n",
+      "liblinear accuracy:48.50\n",
+      "liblinear mse:175.10\n",
+      "liblinear accuracy:47.06\n",
+      "liblinear mse:177.64\n",
+      "svm: 0.0 0.0\n",
+      "liblinear accuracy:35.84\n",
+      "liblinear mse:192.87\n",
+      "liblinear accuracy:35.16\n",
+      "liblinear mse:188.11\n",
+      "svm: 0.09 0.03\n",
       "liblinear accuracy:24.89\n",
       "liblinear mse:208.53\n",
       "liblinear accuracy:23.75\n",
       "liblinear mse:207.55\n",
       "svm: 0.14 0.28\n",
+      "liblinear accuracy:27.21\n",
+      "liblinear mse:120.16\n",
+      "liblinear accuracy:27.18\n",
+      "liblinear mse:117.44\n",
+      "svm: 0.17 0.28\n",
       "liblinear accuracy:39.02\n",
       "liblinear mse:65.17\n",
       "liblinear accuracy:37.76\n",
       "liblinear mse:70.66\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:40.52\n",
+      "liblinear mse:181.63\n",
+      "liblinear accuracy:40.06\n",
+      "liblinear mse:177.45\n",
+      "svm: 0.54 0.73\n",
       "liblinear accuracy:49.05\n",
       "liblinear mse:60.46\n",
       "liblinear accuracy:47.05\n",
@@ -249,10 +274,30 @@
       "liblinear accuracy:42.05\n",
       "liblinear mse:58.28\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:48.52\n",
+      "liblinear mse:174.31\n",
+      "liblinear accuracy:47.04\n",
+      "liblinear mse:176.69\n",
+      "svm: 0.0 0.0\n",
+      "liblinear accuracy:48.42\n",
+      "liblinear mse:172.85\n",
+      "liblinear accuracy:46.80\n",
+      "liblinear mse:176.12\n",
+      "svm: 0.0 0.0\n",
       "liblinear accuracy:43.03\n",
       "liblinear mse:51.82\n",
       "liblinear accuracy:41.64\n",
       "liblinear mse:57.68\n",
+      "svm: 0.0 0.0\n",
+      "liblinear accuracy:48.48\n",
+      "liblinear mse:173.28\n",
+      "liblinear accuracy:46.87\n",
+      "liblinear mse:176.78\n",
+      "svm: 0.0 0.0\n",
+      "liblinear accuracy:48.44\n",
+      "liblinear mse:173.57\n",
+      "liblinear accuracy:46.88\n",
+      "liblinear mse:176.83\n",
       "svm: 0.0 0.0\n",
       "liblinear accuracy:71.89\n",
       "liblinear mse:43.99\n",
@@ -358,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +441,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>16</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.2.00</td>\n",
@@ -422,7 +467,20 @@
        "      <td>2.379716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>2</th>\n",
+       "      <td>blstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>128x64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>41.61</td>\n",
+       "      <td>99.02</td>\n",
+       "      <td>2.379716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -435,7 +493,7 @@
        "      <td>1.697645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>12</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.02</td>\n",
@@ -448,7 +506,7 @@
        "      <td>1.717040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>14</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.00</td>\n",
@@ -461,7 +519,7 @@
        "      <td>2.421177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>18</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>3.sanity-check.00</td>\n",
@@ -474,7 +532,7 @@
        "      <td>2.604265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -500,7 +558,7 @@
        "      <td>2.628344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>6</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -513,7 +571,7 @@
        "      <td>2.739439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>9</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -526,7 +584,7 @@
        "      <td>2.988865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>22</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -539,7 +597,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>21</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -552,7 +610,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>7</th>\n",
        "      <td>blstm</td>\n",
        "      <td>softmax</td>\n",
        "      <td>1.00</td>\n",
@@ -565,7 +623,7 @@
        "      <td>3.012591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>8</th>\n",
        "      <td>blstm</td>\n",
        "      <td>softmax</td>\n",
        "      <td>1.00</td>\n",
@@ -578,7 +636,7 @@
        "      <td>4.100041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>20</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -591,7 +649,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>10</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.01</td>\n",
@@ -604,7 +662,7 @@
        "      <td>2.015204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>blstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -617,7 +675,46 @@
        "      <td>1.395248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>13</th>\n",
+       "      <td>dblstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>32x32x32</td>\n",
+       "      <td>3</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>1.84</td>\n",
+       "      <td>1.559322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>blstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>128x64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>2.676471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>dblstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>64x64x64</td>\n",
+       "      <td>3</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>1.036364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>2.00</td>\n",
@@ -630,7 +727,7 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>19</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.02</td>\n",
@@ -648,49 +745,57 @@
       ],
       "text/plain": [
        "     model predictor              version        lr       hidden ctx-p  \\\n",
-       "12  dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32     1   \n",
+       "16  dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32     1   \n",
        "0    blstm       crf                 2.00  1.00e-03       128x64     1   \n",
-       "13  dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16     3   \n",
-       "10  dblstm       crf                 3.02  5.00e-04        32x32     1   \n",
-       "11  dblstm       crf                 3.00  5.00e-04  32x32x32x32     1   \n",
-       "14  dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32     3   \n",
-       "2    blstm       crf                 2.00  5.00e-04  16x16x16x16     1   \n",
+       "2    blstm       crf                 2.00  5.00e-04       128x64     1   \n",
+       "17  dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16     3   \n",
+       "12  dblstm       crf                 3.02  5.00e-04        32x32     1   \n",
+       "14  dblstm       crf                 3.00  5.00e-04  32x32x32x32     1   \n",
+       "18  dblstm       crf    3.sanity-check.00  5.00e-04  32x32x32x32     3   \n",
+       "4    blstm       crf                 2.00  5.00e-04  16x16x16x16     1   \n",
        "1    blstm       crf                 2.00  1.00e-03    128x64x32     3   \n",
-       "4    blstm       crf                 2.00  5.00e-04  32x32x32x32     1   \n",
-       "7   dblstm       crf                 2.00  5.00e-04       128x64     1   \n",
-       "18  dblstm       crf                 1.00  5.00e-04           16     1   \n",
-       "17  dblstm       crf                 1.00  1.00e-04           96     1   \n",
-       "5    blstm   softmax                 1.00  5.00e-04      128x128     1   \n",
-       "6    blstm   softmax                 1.00  5.00e-04  32x32x32x32     1   \n",
-       "16  dblstm       crf                 1.00  1.00e-04            8     1   \n",
-       "8   dblstm       crf                 2.01  5.00e-04       128x64     1   \n",
-       "3    blstm       crf                 2.00  5.00e-04          256     1   \n",
-       "9   dblstm       crf                 2.00  5.00e-04      512x128     3   \n",
-       "15  dblstm       crf                 4.02  5.00e-04           32     1   \n",
+       "6    blstm       crf                 2.00  5.00e-04  32x32x32x32     1   \n",
+       "9   dblstm       crf                 2.00  5.00e-04       128x64     1   \n",
+       "22  dblstm       crf                 1.00  5.00e-04           16     1   \n",
+       "21  dblstm       crf                 1.00  1.00e-04           96     1   \n",
+       "7    blstm   softmax                 1.00  5.00e-04      128x128     1   \n",
+       "8    blstm   softmax                 1.00  5.00e-04  32x32x32x32     1   \n",
+       "20  dblstm       crf                 1.00  1.00e-04            8     1   \n",
+       "10  dblstm       crf                 2.01  5.00e-04       128x64     1   \n",
+       "5    blstm       crf                 2.00  5.00e-04          256     1   \n",
+       "13  dblstm       crf                 3.00  5.00e-04     32x32x32     3   \n",
+       "3    blstm       crf                 2.01  5.00e-04       128x64     1   \n",
+       "15  dblstm       crf                 3.00  5.00e-04     64x64x64     3   \n",
+       "11  dblstm       crf                 2.00  5.00e-04      512x128     3   \n",
+       "19  dblstm       crf                 4.02  5.00e-04           32     1   \n",
        "\n",
        "   embeddings  valid-f1  train-f1  ratio-f1  \n",
-       "12  glove/s50     96.68     99.45  1.028651  \n",
+       "16  glove/s50     96.68     99.45  1.028651  \n",
        "0   glove/s50     41.61     99.02  2.379716  \n",
-       "13  glove/s50     39.92     67.77  1.697645  \n",
-       "10  glove/s50     38.38     65.90  1.717040  \n",
-       "11  glove/s50     38.06     92.15  2.421177  \n",
-       "14  glove/s50     37.98     98.91  2.604265  \n",
-       "2   glove/s50     37.91     78.65  2.074650  \n",
+       "2   glove/s50     41.61     99.02  2.379716  \n",
+       "17  glove/s50     39.92     67.77  1.697645  \n",
+       "12  glove/s50     38.38     65.90  1.717040  \n",
+       "14  glove/s50     38.06     92.15  2.421177  \n",
+       "18  glove/s50     37.98     98.91  2.604265  \n",
+       "4   glove/s50     37.91     78.65  2.074650  \n",
        "1   glove/s50     37.75     99.22  2.628344  \n",
-       "4   glove/s50     33.85     92.73  2.739439  \n",
-       "7   glove/s50     33.23     99.32  2.988865  \n",
-       "18  glove/s50     30.70       NaN       NaN  \n",
-       "17  glove/s50     24.92       NaN       NaN  \n",
-       "5   glove/s50     24.62     74.17  3.012591  \n",
-       "6   glove/s50     24.19     99.18  4.100041  \n",
-       "16  glove/s50     22.04       NaN       NaN  \n",
-       "8   glove/s50     20.39     41.09  2.015204  \n",
-       "3   glove/s50     13.89     19.38  1.395248  \n",
-       "9   glove/s50      0.30      0.00  0.000000  \n",
-       "15  glove/s50      0.05      0.07  1.400000  "
+       "6   glove/s50     33.85     92.73  2.739439  \n",
+       "9   glove/s50     33.23     99.32  2.988865  \n",
+       "22  glove/s50     30.70       NaN       NaN  \n",
+       "21  glove/s50     24.92       NaN       NaN  \n",
+       "7   glove/s50     24.62     74.17  3.012591  \n",
+       "8   glove/s50     24.19     99.18  4.100041  \n",
+       "20  glove/s50     22.04       NaN       NaN  \n",
+       "10  glove/s50     20.39     41.09  2.015204  \n",
+       "5   glove/s50     13.89     19.38  1.395248  \n",
+       "13  glove/s50      1.18      1.84  1.559322  \n",
+       "3   glove/s50      0.68      1.82  2.676471  \n",
+       "15  glove/s50      0.55      0.57  1.036364  \n",
+       "11  glove/s50      0.30      0.00  0.000000  \n",
+       "19  glove/s50      0.05      0.07  1.400000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,6 +807,15 @@
     "df.sort_values('valid-f1', ascending=False, inplace=True)\n",
     "df.head(50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
