--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -868,11 +868,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: -0.15909999999999999,\n",
+       " 2: 0.2671,\n",
+       " 3: 0.75890000000000002,\n",
+       " 4: -0.33579999999999999,\n",
+       " 5: 0.1467,\n",
+       " 6: 0.1449,\n",
+       " 7: -0.40110000000000001,\n",
+       " 8: -0.52400000000000002,\n",
+       " 9: -0.185,\n",
+       " 10: -0.083000000000000004,\n",
+       " 11: -0.069400000000000003,\n",
+       " 12: -0.096100000000000005,\n",
+       " 13: 0.32290000000000002,\n",
+       " 14: 0.02,\n",
+       " 15: 0.042900000000000001,\n",
+       " 16: -0.59379999999999999,\n",
+       " 17: 0.17599999999999999,\n",
+       " 18: 0.18629999999999999,\n",
+       " 19: -0.1148,\n",
+       " 20: -0.056000000000000001,\n",
+       " 21: 0.078100000000000003,\n",
+       " 22: -0.26019999999999999,\n",
+       " 23: -0.30969999999999998,\n",
+       " 24: -0.60980000000000001,\n",
+       " 25: -0.28510000000000002,\n",
+       " 26: 0.31440000000000001,\n",
+       " 27: -0.37040000000000001,\n",
+       " 28: -0.1996,\n",
+       " 29: -0.041700000000000001,\n",
+       " 30: -0.17000000000000001,\n",
+       " 31: 0.48049999999999998,\n",
+       " 32: -0.090300000000000005,\n",
+       " 33: -0.25700000000000001,\n",
+       " 34: -0.068500000000000005,\n",
+       " 35: -0.059999999999999998,\n",
+       " 36: 0.2329,\n",
+       " 37: 0.0012999999999999999,\n",
+       " 38: 0.26700000000000002,\n",
+       " 39: 0.017899999999999999,\n",
+       " 40: -0.22370000000000001,\n",
+       " 41: -0.16619999999999999,\n",
+       " 42: 0.1053,\n",
+       " 43: 0.0332,\n",
+       " 44: -0.36430000000000001,\n",
+       " 45: 0.079000000000000001,\n",
+       " 46: -0.13919999999999999,\n",
+       " 47: -0.19159999999999999,\n",
+       " 48: 0.44500000000000001,\n",
+       " 49: 0.16309999999999999,\n",
+       " 50: -0.191,\n",
+       " 51: -0.068599999999999994,\n",
+       " 52: 0.2316,\n",
+       " 53: 0.72909999999999997,\n",
+       " 54: -0.33579999999999999,\n",
+       " 55: 0.1239,\n",
+       " 56: 0.1449,\n",
+       " 57: -0.38600000000000001,\n",
+       " 58: -0.52610000000000001,\n",
+       " 59: -0.185,\n",
+       " 60: -0.0395,\n",
+       " 61: -0.084099999999999994,\n",
+       " 62: -0.094600000000000004,\n",
+       " 63: 0.37969999999999998,\n",
+       " 64: 0.02,\n",
+       " 65: 0.042900000000000001,\n",
+       " 66: -0.60099999999999998,\n",
+       " 67: 0.18729999999999999,\n",
+       " 68: 0.1827,\n",
+       " 69: -0.129,\n",
+       " 70: -0.033500000000000002,\n",
+       " 71: 0.19739999999999999,\n",
+       " 72: -0.34460000000000002,\n",
+       " 73: -0.46250000000000002,\n",
+       " 74: -0.57730000000000004,\n",
+       " 75: -0.34449999999999997,\n",
+       " 76: 0.25359999999999999,\n",
+       " 77: -0.37040000000000001,\n",
+       " 78: -0.219,\n",
+       " 79: 0.0016999999999999999,\n",
+       " 80: -0.1512,\n",
+       " 81: 0.4178,\n",
+       " 82: -0.090300000000000005,\n",
+       " 83: -0.25700000000000001,\n",
+       " 84: -0.00040000000000000002,\n",
+       " 85: -0.1492,\n",
+       " 86: -0.016799999999999999,\n",
+       " 87: 0.021499999999999998,\n",
+       " 88: 0.25609999999999999,\n",
+       " 89: 0.017899999999999999,\n",
+       " 90: -0.2296,\n",
+       " 91: -0.16619999999999999,\n",
+       " 92: 0.076799999999999993,\n",
+       " 93: -0.081500000000000003,\n",
+       " 94: -0.29770000000000002,\n",
+       " 95: 0.1154,\n",
+       " 96: -0.13919999999999999,\n",
+       " 97: -0.17580000000000001,\n",
+       " 98: 0.46529999999999999,\n",
+       " 99: 0.1024,\n",
+       " 100: -0.18429999999999999,\n",
+       " 101: 1,\n",
+       " 126: 1,\n",
+       " 151: 1,\n",
+       " 242: 1,\n",
+       " 291: 1,\n",
+       " 340: 0.067500000000000004,\n",
+       " 341: 0.39279999999999998,\n",
+       " 342: -0.36049999999999999,\n",
+       " 343: -1.0,\n",
+       " 344: 0.13420000000000001,\n",
+       " 345: 0.032000000000000001,\n",
+       " 346: 0.10299999999999999,\n",
+       " 347: -0.38390000000000002,\n",
+       " 348: -0.27379999999999999,\n",
+       " 349: 0.00050000000000000001,\n",
+       " 350: 0.2235,\n",
+       " 351: 0.0091000000000000004,\n",
+       " 352: 0.1918,\n",
+       " 353: 0.51959999999999995,\n",
+       " 354: 0.034299999999999997,\n",
+       " 355: -0.083599999999999994,\n",
+       " 356: -0.24970000000000001,\n",
+       " 357: 0.4078,\n",
+       " 358: 0.051900000000000002,\n",
+       " 359: -0.27960000000000002,\n",
+       " 360: 0.10349999999999999,\n",
+       " 361: -0.085099999999999995,\n",
+       " 362: -0.48999999999999999,\n",
+       " 363: 0.058799999999999998,\n",
+       " 364: 0.0149,\n",
+       " 365: 0.079299999999999995,\n",
+       " 366: -0.27589999999999998,\n",
+       " 367: 0.31769999999999998,\n",
+       " 368: -0.0458,\n",
+       " 369: 0.73980000000000001,\n",
+       " 370: -0.41110000000000002,\n",
+       " 371: -0.33860000000000001,\n",
+       " 372: 0.0402,\n",
+       " 373: 0.36799999999999999,\n",
+       " 374: 0.54520000000000002,\n",
+       " 375: -0.19389999999999999,\n",
+       " 376: -0.43240000000000001,\n",
+       " 377: -0.70720000000000005,\n",
+       " 378: -0.33439999999999998,\n",
+       " 379: -0.1772,\n",
+       " 380: 0.26779999999999998,\n",
+       " 381: 0.0499,\n",
+       " 382: -0.71989999999999998,\n",
+       " 383: -0.3352,\n",
+       " 384: -0.4365,\n",
+       " 385: -0.2772,\n",
+       " 386: -0.19439999999999999,\n",
+       " 387: -0.30930000000000002,\n",
+       " 388: 0.36880000000000002,\n",
+       " 389: -0.28720000000000001,\n",
+       " 390: 1,\n",
+       " 13680: 1,\n",
+       " 26970: 1,\n",
+       " 40260: 1,\n",
+       " 53550: 1,\n",
+       " 66840: 1,\n",
+       " 80130: 1,\n",
+       " 89201: 1,\n",
+       " 98272: 1,\n",
+       " 107343: 1,\n",
+       " 116414: 1,\n",
+       " 125485: 1,\n",
+       " 134556: 1,\n",
+       " 134581: 1,\n",
+       " 134606: 1,\n",
+       " 134631: 1,\n",
+       " 134656: 1,\n",
+       " 134681: 1,\n",
+       " 134706: 1,\n",
+       " 134755: 1,\n",
+       " 134804: 1,\n",
+       " 134853: 1,\n",
+       " 134902: 1,\n",
+       " 134951: 1,\n",
+       " 135000: 1,\n",
+       " 135025: 1,\n",
+       " 135050: 1,\n",
+       " 135075: 1,\n",
+       " 144146: 1,\n",
+       " 153217: 1,\n",
+       " 162288: 1}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "series_d = defaultdict(list)\n",
     "for col in columns:\n",
@@ -924,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -965,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -984,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1491,7 @@
        " 538: 0.203252}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1859,7 @@
        " 538: 0.13420000000000001}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1867,8 @@
    "source": [
     "series_d = defaultdict(list)\n",
     "for col in columns:\n",
-    "    if is_dense(col, columns_mapper):\n",
+    "#     if is_dense(col, columns_mapper):\n",
+    "    if col in ('FORM', 'LEMMA', 'PRED'):\n",
     "        lb = bounds_mapper[col]['lb']\n",
     "        ub = bounds_mapper[col]['ub']                \n",
     "        for idx in sparse_features:    \n",
@@ -1720,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
