--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'ID', 'INDEX', 'LEMMA', 'MORF', 'P', 'PRED', 'P_S', 'S']\n"
+      "['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'ID', 'INDEX', 'LEMMA', 'MORF', 'P', 'PRED', 'PRED_MARKER', 'P_S', 'S', 'T']\n"
      ]
     }
    ],
@@ -107,24 +107,43 @@
       "../datasets/csvs/column_shifts/func.csv\n",
       "../datasets/csvs/column_shifts/lemma.csv\n",
       "../datasets/csvs/column_shifts/gpos.csv\n",
+      "../datasets/csvs/column_shifts_ctx_p/form.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/func.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/lemma.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/gpos.csv\n",
       "../datasets/csvs/column_preddist/predicate_distance.csv\n",
+      "../datasets/csvs/column_t/t.csv\n",
+      "../datasets/csvs/column_predmorph/pred_morph.csv\n",
+      "../datasets/csvs/column_passivevoice/passive_voice.csv\n",
+      "../datasets/csvs/column_deptree/func.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2698: DtypeWarning: Columns (21,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../datasets/csvs/column_deptree/lemma.csv\n",
+      "../datasets/csvs/column_deptree/gpos.csv\n",
       "Index(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC',\n",
-      "       'CTREE', 'PRED', 'ARG', 'FORM+1', 'FORM+2', 'FORM+3', 'FORM-1',\n",
-      "       'FORM-2', 'FORM-3', 'FUNC+1', 'FUNC+2', 'FUNC+3', 'FUNC-1', 'FUNC-2',\n",
-      "       'FUNC-3', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'LEMMA-1', 'LEMMA-2',\n",
-      "       'LEMMA-3', 'GPOS+1', 'GPOS+2', 'GPOS+3', 'GPOS-1', 'GPOS-2', 'GPOS-3',\n",
-      "       'FUNC_CTX_P+0', 'FUNC_CTX_P+1', 'FUNC_CTX_P-1', 'LEMMA_CTX_P+0',\n",
-      "       'LEMMA_CTX_P+1', 'LEMMA_CTX_P-1', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1',\n",
-      "       'GPOS_CTX_P-1', 'PRED_DIST'],\n",
-      "      dtype='object')\n"
+      "       ...\n",
+      "       'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1',\n",
+      "       'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'],\n",
+      "      dtype='object', length=149)\n"
      ]
     }
    ],
    "source": [
-    "column_paths = ('column_shifts', 'column_shifts_ctx_p', 'column_preddist')\n",
+    "column_paths = ('column_shifts', 'column_shifts_ctx_p', 'column_preddist', \n",
+    "                'column_t', 'column_predmorph', 'column_passivevoice',\n",
+    "                'column_deptree')\n",
     "\n",
     "for column_path in column_paths:\n",
     "    column_pattern = '{:}{:}/*'.format(DATASETS_DIR, column_path)\n",
@@ -152,8 +171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'PRED_DIST': 'PRED_DIST'}\n",
-      "{'ID': 1, 'S': 1, 'P': 1, 'P_S': 1, 'FORM': 13290, 'LEMMA': 9071, 'GPOS': 25, 'MORF': 25, 'DTREE': 91, 'FUNC': 49, 'CTREE': 49, 'PRED': 1027, 'ARG': 60, 'FORM+1': 13290, 'FORM+2': 13290, 'FORM+3': 13290, 'FORM-1': 13290, 'FORM-2': 13290, 'FORM-3': 13290, 'FUNC+1': 49, 'FUNC+2': 49, 'FUNC+3': 49, 'FUNC-1': 49, 'FUNC-2': 49, 'FUNC-3': 49, 'LEMMA+1': 9071, 'LEMMA+2': 9071, 'LEMMA+3': 9071, 'LEMMA-1': 9071, 'LEMMA-2': 9071, 'LEMMA-3': 9071, 'GPOS+1': 25, 'GPOS+2': 25, 'GPOS+3': 25, 'GPOS-1': 25, 'GPOS-2': 25, 'GPOS-3': 25, 'FUNC_CTX_P+0': 49, 'FUNC_CTX_P+1': 49, 'FUNC_CTX_P-1': 49, 'LEMMA_CTX_P+0': 9071, 'LEMMA_CTX_P+1': 9071, 'LEMMA_CTX_P-1': 9071, 'GPOS_CTX_P+0': 25, 'GPOS_CTX_P+1': 25, 'GPOS_CTX_P-1': 25, 'PRED_DIST': 1}\n"
+      "{'ID': 'ID', 'S': 'S', 'P': 'P', 'P_S': 'P_S', 'FORM': 'FORM', 'LEMMA': 'LEMMA', 'GPOS': 'GPOS', 'MORF': 'MORF', 'DTREE': 'DTREE', 'FUNC': 'FUNC', 'CTREE': 'CTREE', 'PRED': 'PRED', 'ARG': 'ARG', 'FORM+1': 'FORM', 'FORM+2': 'FORM', 'FORM+3': 'FORM', 'FORM-1': 'FORM', 'FORM-2': 'FORM', 'FORM-3': 'FORM', 'FUNC+1': 'FUNC', 'FUNC+2': 'FUNC', 'FUNC+3': 'FUNC', 'FUNC-1': 'FUNC', 'FUNC-2': 'FUNC', 'FUNC-3': 'FUNC', 'LEMMA+1': 'LEMMA', 'LEMMA+2': 'LEMMA', 'LEMMA+3': 'LEMMA', 'LEMMA-1': 'LEMMA', 'LEMMA-2': 'LEMMA', 'LEMMA-3': 'LEMMA', 'GPOS+1': 'GPOS', 'GPOS+2': 'GPOS', 'GPOS+3': 'GPOS', 'GPOS-1': 'GPOS', 'GPOS-2': 'GPOS', 'GPOS-3': 'GPOS', 'FORM_CTX_P+0': 'FORM', 'FORM_CTX_P+1': 'FORM', 'FORM_CTX_P+2': 'FORM', 'FORM_CTX_P+3': 'FORM', 'FORM_CTX_P-1': 'FORM', 'FORM_CTX_P-2': 'FORM', 'FORM_CTX_P-3': 'FORM', 'FUNC_CTX_P+0': 'FUNC', 'FUNC_CTX_P+1': 'FUNC', 'FUNC_CTX_P-1': 'FUNC', 'LEMMA_CTX_P+0': 'LEMMA', 'LEMMA_CTX_P+1': 'LEMMA', 'LEMMA_CTX_P-1': 'LEMMA', 'GPOS_CTX_P+0': 'GPOS', 'GPOS_CTX_P+1': 'GPOS', 'GPOS_CTX_P-1': 'GPOS', 'PRED_DIST': 'PRED_DIST', 'T': 'T', 'PredMorph_01': 'PredMorph_', 'PredMorph_02': 'PredMorph_', 'PredMorph_03': 'PredMorph_', 'PredMorph_04': 'PredMorph_', 'PredMorph_05': 'PredMorph_', 'PredMorph_06': 'PredMorph_', 'PredMorph_07': 'PredMorph_', 'PredMorph_08': 'PredMorph_', 'PredMorph_09': 'PredMorph_', 'PredMorph_10': 'PredMorph_', 'PredMorph_11': 'PredMorph_', 'PredMorph_12': 'PredMorph_', 'PredMorph_13': 'PredMorph_', 'PredMorph_14': 'PredMorph_', 'PredMorph_15': 'PredMorph_', 'PredMorph_16': 'PredMorph_', 'PredMorph_17': 'PredMorph_', 'PredMorph_18': 'PredMorph_', 'PredMorph_19': 'PredMorph_', 'PredMorph_20': 'PredMorph_', 'PredMorph_21': 'PredMorph_', 'PredMorph_22': 'PredMorph_', 'PredMorph_23': 'PredMorph_', 'PredMorph_24': 'PredMorph_', 'PredMorph_25': 'PredMorph_', 'PredMorph_26': 'PredMorph_', 'PredMorph_27': 'PredMorph_', 'PredMorph_28': 'PredMorph_', 'PredMorph_29': 'PredMorph_', 'PredMorph_30': 'PredMorph_', 'PredMorph_31': 'PredMorph_', 'PredMorph_32': 'PredMorph_', 'PredMorph_33': 'PredMorph_', 'PredMorph_34': 'PredMorph_', 'PASSIVE_VOICE': 'PASSIVE_VOICE', 'FUNC_00': 'FUNC_', 'FUNC_01': 'FUNC_', 'FUNC_02': 'FUNC_', 'FUNC_03': 'FUNC_', 'FUNC_04': 'FUNC_', 'FUNC_05': 'FUNC_', 'FUNC_06': 'FUNC_', 'FUNC_07': 'FUNC_', 'FUNC_08': 'FUNC_', 'FUNC_09': 'FUNC_', 'FUNC_10': 'FUNC_', 'FUNC_11': 'FUNC_', 'FUNC_12': 'FUNC_', 'FUNC_13': 'FUNC_', 'FUNC_14': 'FUNC_', 'FUNC_15': 'FUNC_', 'FUNC_16': 'FUNC_', 'FUNC_17': 'FUNC_', 'FUNC_18': 'FUNC_', 'FUNC_19': 'FUNC_', 'FUNC_20': 'FUNC_', 'FUNC_21': 'FUNC_', 'FUNC_CHILD_1': 'FUNC_CHILD_', 'FUNC_CHILD_2': 'FUNC_CHILD_', 'FUNC_CHILD_3': 'FUNC_CHILD_', 'FUNC_GRAND_PARENT': 'FUNC_GRAND_PARENT', 'FUNC_PARENT': 'FUNC_PARENT', 'LEMMA_CHILD_1': 'LEMMA_CHILD_', 'LEMMA_CHILD_2': 'LEMMA_CHILD_', 'LEMMA_CHILD_3': 'LEMMA_CHILD_', 'LEMMA_GRAND_PARENT': 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT': 'LEMMA_PARENT', 'GPOS_00': 'GPOS_', 'GPOS_01': 'GPOS_', 'GPOS_02': 'GPOS_', 'GPOS_03': 'GPOS_', 'GPOS_04': 'GPOS_', 'GPOS_05': 'GPOS_', 'GPOS_06': 'GPOS_', 'GPOS_07': 'GPOS_', 'GPOS_08': 'GPOS_', 'GPOS_09': 'GPOS_', 'GPOS_10': 'GPOS_', 'GPOS_11': 'GPOS_', 'GPOS_12': 'GPOS_', 'GPOS_13': 'GPOS_', 'GPOS_14': 'GPOS_', 'GPOS_15': 'GPOS_', 'GPOS_16': 'GPOS_', 'GPOS_17': 'GPOS_', 'GPOS_18': 'GPOS_', 'GPOS_19': 'GPOS_', 'GPOS_20': 'GPOS_', 'GPOS_21': 'GPOS_', 'GPOS_CHILD_1': 'GPOS_CHILD_', 'GPOS_CHILD_2': 'GPOS_CHILD_', 'GPOS_CHILD_3': 'GPOS_CHILD_', 'GPOS_GRAND_PARENT': 'GPOS_GRAND_PARENT', 'GPOS_PARENT': 'GPOS_PARENT'}\n",
+      "{'ID': 1, 'S': 1, 'P': 1, 'P_S': 1, 'FORM': 13290, 'LEMMA': 9071, 'GPOS': 25, 'MORF': 112, 'DTREE': 91, 'FUNC': 49, 'CTREE': 310, 'PRED': 1027, 'ARG': 60, 'FORM+1': 13290, 'FORM+2': 13290, 'FORM+3': 13290, 'FORM-1': 13290, 'FORM-2': 13290, 'FORM-3': 13290, 'FUNC+1': 49, 'FUNC+2': 49, 'FUNC+3': 49, 'FUNC-1': 49, 'FUNC-2': 49, 'FUNC-3': 49, 'LEMMA+1': 9071, 'LEMMA+2': 9071, 'LEMMA+3': 9071, 'LEMMA-1': 9071, 'LEMMA-2': 9071, 'LEMMA-3': 9071, 'GPOS+1': 25, 'GPOS+2': 25, 'GPOS+3': 25, 'GPOS-1': 25, 'GPOS-2': 25, 'GPOS-3': 25, 'FORM_CTX_P+0': 13290, 'FORM_CTX_P+1': 13290, 'FORM_CTX_P+2': 13290, 'FORM_CTX_P+3': 13290, 'FORM_CTX_P-1': 13290, 'FORM_CTX_P-2': 13290, 'FORM_CTX_P-3': 13290, 'FUNC_CTX_P+0': 49, 'FUNC_CTX_P+1': 49, 'FUNC_CTX_P-1': 49, 'LEMMA_CTX_P+0': 9071, 'LEMMA_CTX_P+1': 9071, 'LEMMA_CTX_P-1': 9071, 'GPOS_CTX_P+0': 25, 'GPOS_CTX_P+1': 25, 'GPOS_CTX_P-1': 25, 'PRED_DIST': 1, 'T': 36, 'PredMorph_01': 1, 'PredMorph_02': 1, 'PredMorph_03': 1, 'PredMorph_04': 1, 'PredMorph_05': 1, 'PredMorph_06': 1, 'PredMorph_07': 1, 'PredMorph_08': 1, 'PredMorph_09': 1, 'PredMorph_10': 1, 'PredMorph_11': 1, 'PredMorph_12': 1, 'PredMorph_13': 1, 'PredMorph_14': 1, 'PredMorph_15': 1, 'PredMorph_16': 1, 'PredMorph_17': 1, 'PredMorph_18': 1, 'PredMorph_19': 1, 'PredMorph_20': 1, 'PredMorph_21': 1, 'PredMorph_22': 1, 'PredMorph_23': 1, 'PredMorph_24': 1, 'PredMorph_25': 1, 'PredMorph_26': 1, 'PredMorph_27': 1, 'PredMorph_28': 1, 'PredMorph_29': 1, 'PredMorph_30': 1, 'PredMorph_31': 1, 'PredMorph_32': 1, 'PredMorph_33': 1, 'PredMorph_34': 1, 'PASSIVE_VOICE': 1, 'FUNC_00': 1, 'FUNC_01': 1, 'FUNC_02': 1, 'FUNC_03': 1, 'FUNC_04': 1, 'FUNC_05': 1, 'FUNC_06': 1, 'FUNC_07': 1, 'FUNC_08': 1, 'FUNC_09': 1, 'FUNC_10': 1, 'FUNC_11': 1, 'FUNC_12': 1, 'FUNC_13': 1, 'FUNC_14': 1, 'FUNC_15': 1, 'FUNC_16': 1, 'FUNC_17': 1, 'FUNC_18': 1, 'FUNC_19': 1, 'FUNC_20': 1, 'FUNC_21': 1, 'FUNC_CHILD_1': 1, 'FUNC_CHILD_2': 1, 'FUNC_CHILD_3': 1, 'FUNC_GRAND_PARENT': 1, 'FUNC_PARENT': 1, 'LEMMA_CHILD_1': 1, 'LEMMA_CHILD_2': 1, 'LEMMA_CHILD_3': 1, 'LEMMA_GRAND_PARENT': 1, 'LEMMA_PARENT': 1, 'GPOS_00': 1, 'GPOS_01': 1, 'GPOS_02': 1, 'GPOS_03': 1, 'GPOS_04': 1, 'GPOS_05': 1, 'GPOS_06': 1, 'GPOS_07': 1, 'GPOS_08': 1, 'GPOS_09': 1, 'GPOS_10': 1, 'GPOS_11': 1, 'GPOS_12': 1, 'GPOS_13': 1, 'GPOS_14': 1, 'GPOS_15': 1, 'GPOS_16': 1, 'GPOS_17': 1, 'GPOS_18': 1, 'GPOS_19': 1, 'GPOS_20': 1, 'GPOS_21': 1, 'GPOS_CHILD_1': 1, 'GPOS_CHILD_2': 1, 'GPOS_CHILD_3': 1, 'GPOS_GRAND_PARENT': 1, 'GPOS_PARENT': 1}\n"
      ]
     }
    ],
